    * Running "cvc cook" in a directory with a CONARY file now builds the
      sources specified by that checkout. This is particularly useful for
      source troves which do not provide recipes thanks to a factory
      (CNY-2642)
    * Conary looks for factories in the same places it looks for superclasses
      now, including the current working directory for local cooks
      (CNY-2641)

  o Bug Fixes:
    * Rollbacks could restore files from local rollbacks by overwriting
      existing contents rather than replacing the file. In addition,
      the operation was not journaled properly. (CNY-2596)
    * A bug in finding the sources required to build all the packages for
      a group that omitted replace() packages has been fixed.  This mainly
      affected rmake builds of group recipes. (CNY-2605)
    * An error in the repository that caused a malformed exception to
      be returned to the client when a trove was missing has been
      corrected. (CNY-2624)
    * If launched with sudo, Conary will no longer change the owner
      on the user's PGP keyring, and will use the proper system-wide
      keyring. (CNY-2630)
    * When using PostgreSQL as a repository backend, some queries
      could be executed with poor execution plans (CNY-2639)
    * A bug that caused a local cook (e.g., "cvc cook pkg.recipe") to
      fail at "Copying forward metadata to newly built items..." when
      the Conary repository for that recipe is not available has been
      fixed. (CNY-2640)
    * Checking out source components which used factories now preserves
      the factory
    * Building directly from recipe files which use factories for superclasses
      now works (CNY-2656)
    * conary rdiff works correctly for groups that include troves from
      foreign repositories. (CNY-2544)
    * An issue related to the build logger not properly setting the
      terminal has been fixed. (CNY-2647)

  o Client changes